# asteroids

./: README.md  hello.py  main.py  pyproject.toml
src/: asteroid.py  asteroidfield.py  circleshape.py  constants.py  main.py  player.py  shot.py
