[project]
name = "asteroids"
version = "0.1.0"
description = "Simple asteroids game"
authors = [
    {name = "Saifur Rahman", email = "saifur2akash@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.2",
]
